# VkEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: VkEngine.hpp  utils.hpp
source/: VkEngine.cpp  main.cpp  utils.cpp
